--- a/jshome.html
+++ b/jshome.html
@@ -39,7 +39,8 @@
                     <img src="headset1.jpeg" class="card-img-top" alt="Headset 1">
                     <div class="card-body">
                         <p class="card-text">Overheadphone</p>
-                        <a href="product-details.html?name=Overheadphone%20&desc=High-quality%20sound%20and%20comfort.&price=70&img=headset1.jpeg" class="btn btn-primary">View Details</a>
+                        <a href="product-details.html?name=Overheadphone%20&desc=High-quality%20sound%20and%20comfort.&price=70&img=headset1.jpeg"
+                            class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +49,8 @@
                     <img src="headset2.webp" class="card-img-top" alt="Headset 2">
                     <div class="card-body">
                         <p class="card-text"> Wireless Overheadset</p>
-                        <a href="product-details.html?name=Wireless%20Overheadset&desc=Wireless%20with%20noise%20cancellation.&price=90&img=headset2.webp" class="btn btn-primary">View Details</a>
+                        <a href="product-details.html?name=Wireless%20Overheadset&desc=Wireless%20with%20noise%20cancellation.&price=90&img=headset2.webp"
+                            class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -57,7 +59,8 @@
                     <img src="headset3.webp" class="card-img-top" alt="Headset 3">
                     <div class="card-body">
                         <p class="card-text">Wireless earphone</p>
-                        <a href="product-details.html?name=Wireless%20earphone&desc=Builtin%20microphone%20for%20calls.&price=60&img=headset3.webp" class="btn btn-primary">View Details</a>
+                        <a href="product-details.html?name=Wireless%20earphone&desc=Builtin%20microphone%20for%20calls.&price=60&img=headset3.webp"
+                            class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -66,7 +69,8 @@
                     <img src="headset4.avif" class="card-img-top" alt="Headset 4">
                     <div class="card-body">
                         <p class="card-text">Wired Overheadset</p>
-                        <a href="product-details.html?name=Wired%20Overheadset&desc=Comfortable%20over-ear%20design.&price=100&img=headset4.avif" class="btn btn-primary">View Details</a>
+                        <a href="product-details.html?name=Wired%20Overheadset&desc=Comfortable%20over-ear%20design.&price=100&img=headset4.avif"
+                            class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
